2007-07-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m (NSView-_displayPageInRect:withInfo:),
	* Source/NSView.m (-_rebuildCoordinates, -initWithFrame:,
	-initWithCoder:, -dealloc, -_updateBoundsMatrix, -setBounds:,
	-setBoundsOrigin:, -setBoundsRotation:, -boundsRotation,
	-_lockFocusInContext:inRect:):
	Create _boundsMatrix only when needed and protect all uses of it.
	* Source/NSView.m (-initWithCoder:): Remove call to
	setFrameOrigin: on frame matrix.
	
2007-07-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextField.m (-isFlipped): Report the text field as
	being flipped.

2007-06-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSecureTextFieldCell (-drawInteriorWithFrame:): Add
	some support for bullet echoing and a comment on the missing bits.

2007-06-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_lockFocusInContext:inRect:): Ignore the frame
	origin when computing the clip area.

2007-06-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-setBoundsRotation:): Ignore the frame origin
	when computing the bounds.
	* Source/NSView.m (-drawPageBorderWithSize:): Remove test code
	accidentally introduced in last change.

2007-06-26 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSView.h: Add new MacOSX methods.
	* Source/NSView.m: Basic implementation of new MacOSX methods.
	Rewrote all the display* methods to use the new method
	[displayRectIgnoringOpacity:inContext] and made them more
	consistent. Add some documentation for the display mechanism.
	* Source/GSPDFPrintOperation.m (-_print),
	* Source/GSEPSPrintOperation.m (-_print),
	* Source/NSPrintOperation.m (NSView-_displayPageInRect:withInfo:): 
	Use new method [NSView displayRectIgnoringOpacity:inContext:]. 
	* Source/NSView.m (-endPage): Add DPSgrestore() call.

2007-06-23 10:43-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSObjectController.h
	* Source/NSObjectController.m: Changed "class" to "aClass" to 